--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,6 +9,15 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54540767-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-54540767-2');
+    </script>
   <meta charset="utf-8">
   <meta content="ie=edge" http-equiv="x-ua-compatible">
 
